area_people.html grid 나누기

--- a/game/templates/choose_area.html
+++ b/game/templates/choose_area.html
@@ -5,7 +5,7 @@
 <!-- navbar 시작 -->
 <div class="container">
     <div class="choose_area">
-        <p>들어갈 지역을 고르세요</p>
+        <p>아래 4개의 지역 중 들어갈 지역을 고르세요</p>
     </div>
     <div class="list_area">
         <div class="빈 grid"></div>
