--- a/game/templates/area_people.html
+++ b/game/templates/area_people.html
@@ -51,7 +51,7 @@
     }
     .list_people {
         text-align: left;
-        padding-left: 30px;
+        padding-left: 33%;
         font-family:  Noto Serif KR;
         font-size: 25px;
     }
@@ -61,8 +61,8 @@
     }
     input.button {
         all: unset;
-        background-color: #4a7745;
-        border-color:  #4a7745;
+        background-color:#db2e2e;
+        border-color: #db2e2e;
         width: 10%;
         height: 40px;
         border-radius: 10px;
