--- a/game/templates/role.html
+++ b/game/templates/role.html
@@ -5,7 +5,7 @@
 <!-- navbar 시작 -->
 <div class="start">
     <div class="game_open">
-        ROUND : {{round}}
+        ROUND  {{round}} ({{game_open}})
     </div>
     <div class="container">
         <div class="role_img">
@@ -14,8 +14,6 @@
         <div class="role_all">
             <div class="role_name">
                 <p>내가 할 역할: {{your_kind}}</p>
-                {{game_open}}
-
             </div>
             <div class="role_detail">
                 <p>승리 조건: {{your_kind.victory_condition}}</p>
