--- a/foodchain/templates/navbar_base.html
+++ b/foodchain/templates/navbar_base.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800&amp;subset=korean" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:200,300,400,500,600,700,900&amp;subset=korean"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=East+Sea+Dokdo&amp;subset=korean" rel="stylesheet">
 </head>
 
 <body>
